Enhance product display title handling and introduce admin endpoints
- Added `display_title` field to product models for improved user-friendly display in UI.
- Implemented sanitization for `name` and `display_title` to ensure clean output.
- Introduced new admin API endpoints for fetching raw product data from the system and WooCommerce.
- Updated feature flag management to control the population of `display_title` based on the `normalize_titles` flag.
- Enhanced documentation to reflect changes in API responses and new admin functionalities.